--- a/app/views/trips/_subtrip_fields.html.erb
+++ b/app/views/trips/_subtrip_fields.html.erb
@@ -4,8 +4,8 @@
         At   
       </div> 
       <div class="col-sm-9">
-        <%= f.select :jminute, options_for_minute, {:include_blank => true} %> : 
-        <%= f.select :jhour, options_for_hour, {:include_blank => true} %>
+        <%= f.select :jminute, options_for_minute %> : 
+        <%= f.select :jhour, options_for_hour, {:include_blank => true},{class: "required"}  %>
       </div>
 
   <!-- On -->
@@ -27,7 +27,7 @@
           <%= collection_select :temp, :state_id, State.order(:local_name), :id, :local_name,  {:prompt=>true} ,{ class: 'my-states'} %>        
         </div>
         <div class="cities">
-          <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:class => 'select-via-city form-control '} %>     <!-- select2_input -->        
+          <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name,{}, {:class => 'required'} %>     <!-- select2_input -->        
         </div>
         <%= f.hidden_field :_destroy %>
         <div class="remove_fields_div">
