--- a/app/views/users/_single_profile.html.erb
+++ b/app/views/users/_single_profile.html.erb
@@ -1,5 +1,5 @@
 <div class="panel panel-default clear">
-  <div class="panel-heading">Personal Detail</div>
+  <div class="panel-heading">Personal Detail <%=t  'hello.nav'  %></div>
 	<table class="table">
 		<tbody>
 			<%=  table_show_cell "First Name", @user.firstname %>
