--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
   <%= render 'footer' %>
   
   <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
-
+	<%= render "layouts/ga" if Rails.env.production?  %>
 
 </body>
 </html>
