move application partials to application folder

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,10 +1,5 @@
-<footer>
-	
-</footer>
+  
+	<%= render "ga" if Rails.env.production?  %>
 
-<script>
-	$(document).ready(function(){
-	 $(".tip").tooltip();
-	});
-		
-</script>
+</body>
+</html>
