--- a/app/views/layouts/application_user.html.erb
+++ b/app/views/layouts/application_user.html.erb
@@ -1,4 +1,4 @@
-  <%= render 'layouts/head' %>
+  <%= render 'head' %>
 
   <%= render 'navbar' %>
 
@@ -6,4 +6,4 @@
       <%= yield %>  
   </div>
 
-  <%= render 'layouts/footer' %>
+  <%= render 'footer' %>
