--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<%= render 'layouts/head' %>
+<%= render 'head' %>
 
 <%= render 'navbar' %>
 
@@ -14,4 +14,4 @@
   
 </div>
 
-<%= render 'layouts/footer' %>
+<%= render 'footer' %>
