--- a/app/assets/stylesheets/search_subtrips.css.scss
+++ b/app/assets/stylesheets/search_subtrips.css.scss
@@ -36,7 +36,8 @@
 			height: 34px;
 			overflow: hidden;
 			// background: url(new_arrow.png) no-repeat right #ddd;
-			border: 1px solid #ccc;			
+			border: 1px solid #ccc;		
+			font-size: .9em;	
 			select{
 				background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
 				border: medium none;
