--- a/app/views/search_subtrips/_search_form.html.erb
+++ b/app/views/search_subtrips/_search_form.html.erb
@@ -19,16 +19,16 @@
 				</div>
 		<!-- Submit -->
 			  <div class="col-sm-4 my-col-lg-3">
-						<%= f.button :submit, "Search", class: "btn btn-primary " %>
+						<%= f.button :submit, t("search_subtrips.form.search_btn"), class: "btn btn-primary " %>
 				</div>		
 			<% end %>
 
 		<!-- Form Mode Change Links -->
 			<div class="col-sm-4 my-col-lg-2 mode-selector">
 				<% if session['search_mode'] == 'autocomplete' %>
-						<%= link_to "Autocomplete Mode", choose_search_mode_search_subtrips_path(search_mode: 'select') %>
+						<%= link_to  t("search_subtrips.form.mode.autocomplete.selector"), choose_search_mode_search_subtrips_path(search_mode: 'select') %>
 				<% else %>
-						<%= link_to "Select Mode", choose_search_mode_search_subtrips_path(search_mode: 'autocomplete') %> 
+						<%= link_to  t("search_subtrips.form.mode.select.selector"), choose_search_mode_search_subtrips_path(search_mode: 'autocomplete') %> 
 				<% end %>
 			</div>
 		</div>
