--- a/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
@@ -1,22 +1,16 @@
 <!-- Origin -->
 <div class="origin_input col-sm-6  my-col-md-12 my-col-lg-7">
-	<span class="glyphicon glyphicon-map-marker"></span>
-	<%= f.input :origin_name,:label => false, placeholder:"Select start city",  input_html: {class: "form-control"} %>					
+	<%= f.input :origin_name,:label => false, placeholder:t("search_subtrips.form.mode.autocomplete.placeholder.origin"),  input_html: {class: "form-control"} %>					
 	<div class=" cycle autocomplete_mode" style="border:0;">
-	<%= f.select :origin_cycle, (5..50).step(5).map{|s| ["#{s} KM", s]}%>
-	<span class="glyphicon glyphicon-chevron-down"></span>
-
+		<%= f.select :origin_cycle, (5..50).step(5).map{|s| ["#{s} #{t("search_subtrips.form.km")}", s]}%>
 	</div>
 </div>
 
 <!-- Destination -->
 <div class=" destination_input col-sm-6  my-col-md-12 my-col-lg-7">
-	<span class="glyphicon glyphicon-map-marker"></span>
-	<%= f.input :destination_name,:label => false, placeholder: "Select your destination", input_html: {class: "form-control"} %>
+	<%= f.input :destination_name,:label => false, placeholder: t("search_subtrips.form.mode.autocomplete.placeholder.destination"), input_html: {class: "form-control"} %>
 	<div class=" cycle autocomplete_mode"  style="border:0;">
-	<%= f.select :destination_cycle, (5..50).step(5).map{|s| ["KM #{s}", s]}%> 
-	<span class="glyphicon glyphicon-chevron-down"></span>
-
+		<%= f.select :destination_cycle, (5..50).step(5).map{|s| ["#{s} #{t("search_subtrips.form.km")} ", s]}%> 
 	</div>
 </div>
 
