load validation messages_fa.js file when locale is fa. validate search subtrips

--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -11,6 +11,10 @@
 
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 
+  <% if params[:locale] == 'fa' %>
+  	<%= javascript_include_tag "localization/messages_fa" %>  	
+  <% end %>
+
   <%= csrf_meta_tags %>
 </head>
 <body>
