--- a/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
@@ -1,6 +1,6 @@
 <!-- Origin -->
 <div class="origin_input col-sm-6 my-col-md-12 my-col-lg-7">
-    <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input', placeholder: t("search_subtrips.form.mode.select.placeholder.origin") } %>
+    <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input required', placeholder: t("search_subtrips.form.mode.select.placeholder.origin") } %>
 	<div class="cycle select_mode">
 	<%= f.select :origin_cycle, (5..50).step(5).map{|s| ["#{s} #{t("search_subtrips.form.km")}", s]}%>
 		<span class="glyphicon glyphicon-chevron-down"></span>
@@ -9,7 +9,7 @@
 
 <!-- Destination -->
 <div class=" destination_input col-sm-6 my-col-md-12 my-col-lg-7">
-    <%= f.grouped_collection_select :destination_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, { class: 'select2_input', placeholder: t("search_subtrips.form.mode.select.placeholder.destination") } %>
+    <%= f.grouped_collection_select :destination_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, { class: 'select2_input required', placeholder: t("search_subtrips.form.mode.select.placeholder.destination") } %>
 	<div class="cycle select_mode">
 	<%= f.select :destination_cycle, (5..50).step(5).map{|s| ["#{s} #{t("search_subtrips.form.km")}", s]} %> 
 		<span class="glyphicon glyphicon-chevron-down"></span>
