sign up user form shows in home page

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,6 +1,3 @@
-<h1>Home</h1>
-Welcome to shouter!
-
 <%= render partial: 'search_subtrips/search_form' %>
-
-<%=  %>
+Welcome to shouter!
+<%= render 'users/new/form' %>
