show last login city and country in user profile larg screen

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,3 +1,5 @@
 <%= render partial: 'search_subtrips/search_form' %>
-Welcome to shouter!
+<p>Welcome to Hamsafaryab!</p>
+<p>به همسفریاب خوش آمدید</p>
+
 <%= render 'users/new/form' %>
