--- a/app/views/users/show/_large_screens.html.erb
+++ b/app/views/users/show/_large_screens.html.erb
@@ -1,6 +1,7 @@
 <!-- --       Larg Screen      -- -->
 <div id="sidebar" class="col-lg-4">
   <%= render 'users/show/avatar_and_brief_for_large_screen' %>
+  <p>Last login from <%= Geocoder.search(@user.last_sign_in_ip)[0].city %>, <%= Geocoder.search(@user.last_sign_in_ip)[0].country %></p>
 	<%= render 'single_profile' %>
 	<%= render 'vehicles/show' %>
 
