eliminate tel, email and mobile of user from public

--- a/app/views/users/edit/_personal_profile.html.erb
+++ b/app/views/users/edit/_personal_profile.html.erb
@@ -15,6 +15,7 @@
 			<%= f.input :username %>
 			<%= f.input :firstname %>
 			<%= f.input :lastname %>
+			<%= f.input :age, collection: 13..90 %>
 			<% if current_user.is_admin? %>
 			  <%= f.label :admin, "Admin" %>
 			  <%= f.check_box :admin %>  
