--- a/app/views/users/_single_profile.html.erb
+++ b/app/views/users/_single_profile.html.erb
@@ -16,12 +16,12 @@
   <div class="panel-heading">Contact Detail</div>
 	<table class="table">		
 		<tbody>
-			<%=  table_show_cell "Email", @user.email %>
-			<%=  table_show_cell "Tel", @user.tel %>
-			<%=  table_show_cell "Mobile", @user.mobile %>
+			<%#=  table_show_cell "Email", @user.email %>
+			<%#=  table_show_cell "Tel", @user.tel %>
+			<%#=  table_show_cell "Mobile", @user.mobile %>
 			<%=  table_show_cell "City", @user.city %>
 			<%=  table_show_cell "Address", @user.address %>
-			<%=  table_show_cell "Post Code", @user.post_code %>
+			<%#=  table_show_cell "Post Code", @user.post_code %>
 		</tbody>
 	</table>
 </div>
