--- a/app/views/users/show/_large_screens.html.erb
+++ b/app/views/users/show/_large_screens.html.erb
@@ -2,15 +2,8 @@
 <div id="sidebar" class="col-lg-4">
   <%= render 'users/show/avatar_and_brief_for_large_screen' %>
 
-<div class="panel panel-default">
-  <div class="panel-body">
-		Last loged in from: 
-		<%= @user.last_login_city %>, 
-		<%= @user.last_login_country %>  
-	</div>
-</div>
+	<%= render 'users/show/user_overview' %>
 
-  <p></p>
 	<%= render 'single_profile' %>
 	<%= render 'vehicles/show' %>
 
