--- a/app/assets/stylesheets/user_profile.css.scss
+++ b/app/assets/stylesheets/user_profile.css.scss
@@ -25,6 +25,13 @@ h2{
 		height: 26px;
 	}	
 	.cover_upload_form, .avatar_upload_form{
+		#user_cover, #user_avatar{
+	 		background-image: url('https://s3-eu-west-1.amazonaws.com/hamsafaryab.production/static_files/images/upload.png');
+  		background-position: -2px 0;
+	    height: 30px;
+	    width: 33px;
+			text-indent: 40px;	
+		}
 		position: absolute;
 		top: 10px;
 		right: 10px;
@@ -104,3 +111,27 @@ h2{
 	} //visible-lg
 }// #userContainer
 
+#user_edit{
+	.userurl_input{
+		position: relative;
+		color: blue;
+		.hamsafaryaburl{
+			position: absolute;
+			left: 86px;
+			z-index: 10;
+			top: 7px;		
+		}
+		.slash{
+			position: absolute;
+			left: 236px;
+			z-index: 10;
+			top: 4px;
+			font-size: 1.5em;		
+		}			
+		#user_slug{
+			text-align: left;
+			padding-left: 168px;
+		}
+
+	}
+}
