add slug_updated to user and display it in user edit

--- a/app/views/users/edit/_acount_settings.html.erb
+++ b/app/views/users/edit/_acount_settings.html.erb
@@ -28,6 +28,6 @@
 								 placeholder: "current password"  %>
 		<%= f.hidden_field :tab, :value => "acount_settings" %>
 
-		<%= f.button :submit %>
+		<%= f.button :submit, {class: ' btn-primary col-sm-offset-3'} %>
 		  
 	<% end %>
