--- a/app/views/users/show/_user_overview.html.erb
+++ b/app/views/users/show/_user_overview.html.erb
@@ -3,9 +3,27 @@
   	<%= @user.name %> 
   	<%=t  '.overview'  %>
   </div>
+<!--   <div class="panel-body">	</div> -->
+	<table class="table">
+		<tbody>
+		<tr>
+			<td>Activity</td>
+			<td><%= resent_activity(@user, "activity") %>
+</td>
+		</tr>
 
-  <div class="panel-body">
-		Last loged in from: 
-		<%= @user.last_login_location %>
-	</div>
+			<tr>
+				<td>Last login Location</td>
+				<td><%= @user.last_login_location %></td>
+			</tr>
+
+			<% if @user.slug_updated %>
+				<tr>
+					<td>Url</td>
+					<td><a class="small" href="http:/www.hamsafaryab.com/<%= @user.slug %>"> 
+						www.hamsafaryab.com/<%= @user.slug %></td>
+				</tr>	
+			<% end %>
+		</tbody>
+	</table>
 </div>
