--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Shouter</title>
   <meta name="LANGUAGE" content="fa" />
-  <meta name="description" content="همسفریاب &#10004; بلیط اتوبوس &#10004; بلیط قطار &#10004; بلیط هواپیما &#10004; سفر راحت &#10004;">
+  <meta name="description" content="همسفریاب &#10004; بلیط اتوبوس &#10004; بلیط قطار &#10004; تسهیل در یافتن همسفر در مسافرت های بین شهری &#10004; سفر راحت &#10004;">
 
   <%= favicon_link_tag IMAGES_PATH + "ico/favicon.gif" %>
   <script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places" type="text/javascript"></script>
