--- a/app/views/users/show/_small_screens.html.erb
+++ b/app/views/users/show/_small_screens.html.erb
@@ -3,7 +3,7 @@
 	<%= render 'users/show/cover' %>
 	<%= flash_creator flash %>
 	<%= render 'single_profile' %>
-	<%= render 'vehicles/show' %>
+	<%= render partial: 'vehicles/show', locals: {user: @user} %>
 	<%= render partial: 'users/users_raw', locals: {users: @followed_users, title: "#{@user.name }'s Followed Users "} %>	
 	<%= render @shouts %>
 </div>
