--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,6 @@
 <h1>hello</h1>
 <ul>
 	<% @users.each do |user| %>
-		<% name = user.username.blank? ? "User" : user.username  %>
-		<li> <%= link_to name , user %> - <%= user.email %></li>
+		<li> <%= link_to user.name, (profile_url user) %></li>
 	<% end %>
 </ul>
