--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,45 @@
-<!-- --       Larg Screen      -- -->
-<div class="visible-lg">
-	<%= render 'users/show/large_screens' %>
-</div>
+<div id="user_edit">
+	<div class="page-header">
+	  <h2><%= @user.name %>'s Profile</h2>  
+	</div>
+	<div class="panel panel-default col-md-8">
 
 
-<!-- --       Small Screen     -- -->
-<div class=" hidden-lg "> 
-	<%= render 'users/show/small_screens' %>
+
+		  <div class="panel-body">
+			  <%= devise_error_messages! %>
+		  </div>
+
+			<ul id="myTab" class="nav nav-tabs nav-justified">
+			  <li class="active"><a href="#personal_profile" data-toggle="tab">Personal Profile</a></li>
+			  <li><a href="#contact_details" data-toggle="tab">Contact Details</a></li>
+			  <li><a href="#acount_settings" data-toggle="tab">Acount settings</a></li>
+			  <li><a href="#page_url" data-toggle="tab">Page Url</a></li>
+			</ul>
+
+	<!-- Tab panes -->
+	<div class="tab-content">
+
+		<div class="tab-pane active" id="personal_profile">
+		  <%= render partial: 'users/show/personal_profile' %>
+		</div>
+
+	  <div class="tab-pane" id="contact_details">
+	  	<%= render partial: 'users/show/contact_details' %>
+	  </div>
+
+		<div class="tab-pane" id="acount_settings">
+			<%= render partial: 'users/show/acount_settings' %>
+		</div>
+
+	  <div class="tab-pane" id="page_url">
+			<%= render partial: 'users/show/page_url' %>
+	  </div>
+	</div>
+	</div>
+
+
+	<p class="tab" style="visibility:hidden;">
+		<%= params[:user][:tab] if params[:user] && params[:user][:tab] %>
+	</p>	
 </div>
