--- a/app/views/users/edit/_page_url.html.erb
+++ b/app/views/users/edit/_page_url.html.erb
@@ -4,6 +4,11 @@
 	html: { method: :put, class: 'form-horizontal' }		) do |f| %>
 
 		<h3>Profile web link</h3>
+		
+		<% unless @user.slug_updated %>
+			<div class="alert alert-danger text-center">You can change your profile url only one time</div>	
+		<% end %>
+
 		<% if f.object.slug_updated %>
 			<div class="well">
 			<p class="text-center">
