move link_to_url helper method from profile helper to application helper and use it in users page_url

--- a/app/views/users/show/_page_url.html.erb
+++ b/app/views/users/show/_page_url.html.erb
@@ -8,9 +8,7 @@
     <label class="col-sm-3 control-label">Profile Url</label>
     <div class="col-sm-9">
       <p class="form-control-static">
-				<a href="http:/www.hamsafaryab.com/<%= @user.slug %>"> 
-					www.hamsafaryab.com/<%= @user.slug %>
-				</a>
+				<%= link_to_profile(@user, "") %>
       </p>
     </div>
   </div>
