complete user profile show to display small devises

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -7,5 +7,5 @@
 
 <!-- --       Small Screen     -- -->
 <div class=" hidden-lg "> 
-	<%#= render 'profiles/show/small_screens' %>
+	<%= render partial:  'profiles/show/small_screens', locals: {user: @profile.user}   %>
 </div>
