--- a/app/views/profiles/show/_avatar_and_brief_for_small_screen.html.erb
+++ b/app/views/profiles/show/_avatar_and_brief_for_small_screen.html.erb
@@ -1,6 +1,6 @@
 <div class="userAvatar hidden-lg">
 	<div class="gravatar">
-		<%= render partial: 'profiles/show/gravatar', locals: {user: @profile.user} %>
+		<%= render partial: 'profiles/show/gravatar', locals: {user: user} %>
 	</div>
 	<h1 class="nameOfUser"><small><%= user.name %></small></h1>	
 	<span class="stars" style="background-position:1431px 0px;"></span>
