translation for home title and translation for sign in page

--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Shouter</title>
+  <title><%=t 'site_info.title' %><%= " | #{@page_title}" if @page_title %></title>
   <meta name="LANGUAGE" content="fa" />
   <meta name="description" content="همسفریاب &#10004; بلیط اتوبوس &#10004; بلیط قطار &#10004; تسهیل در یافتن همسفر در مسافرت های بین شهری &#10004; سفر راحت &#10004;">
 
