change link_to_profile method and add lenght to it

--- a/app/views/users/edit/_page_url.html.erb
+++ b/app/views/users/edit/_page_url.html.erb
@@ -13,9 +13,9 @@
 			<div class="well">
 			<p class="text-center">
 				your url is:
-				<a href="http:/www.hamsafaryab.com/<%= f.object.slug %>"> 
-					www.hamsafaryab.com/<%= f.object.slug %>
-				</a>
+				<strong>
+					<%= link_to_profile(@user,"") %>					
+				</strong>
 			</p>
 			</div>
 		<% else %>
