--- a/app/views/users/show/_page_url.html.erb
+++ b/app/views/users/show/_page_url.html.erb
@@ -8,7 +8,9 @@
     <label class="col-sm-3 control-label">Profile Url</label>
     <div class="col-sm-9">
       <p class="form-control-static">
-				<%= link_to_profile(@user, "") %>
+        <strong>
+          <%= link_to_profile(@user,"") %>          
+        </strong>
       </p>
     </div>
   </div>
