--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,14 +1,18 @@
-<%= render partial: 'search_subtrips/search_form' %>
+<div id="home">
+	<div id="search_form" class="col-md-6">
+		<%= render partial: 'search_form' %>	
+	</div>
 
-<!-- <h2>به همسفریاب خوش آمدید</h2> -->
-
-
-<div class="col-md-6 col-md-offset-3 ">
-<h2>Welcome to Hamsafaryab!</h2>
-	<div class="panel panel-default">
-	  <div class="panel-heading">You are a member of hamsafaryab.com</div>
-	  <div class="panel-body">
-				<%= render 'devise/sessions/form' %>	
-	  </div>
+	<div class="col-md-6">
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+		  	<h4><%= t('.welcome_message') %> </h4> 
+		  </div>
+		  <div class="panel-body">
+		  	<div class="col-md-10 col-md-offset-1">
+					<%= render 'devise/sessions/form' %>	
+		  	</div>
+		  </div>
+		</div>		
 	</div>
 </div>
