--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,16 @@
-<div id="user_edit">
-	<div class="page-header">
-	  <h2>Edit <%= resource_name.to_s.humanize %></h2>  
-	</div>
-	<div class="panel panel-default col-md-8">
-		  <div class="panel-body">
-			  <%= devise_error_messages! %>
+<div id="user_edit" class="user_profile">
+	<div class="col-md-8">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+		    <h3 class="panel-title col-xs-8">
+		    	<%= @user.name %>'s Profile Edit Page
+		    </h3>
+				<div class="pull-left">
+					<%= gravatar @user, 85, "img-thumbnail", :square %>
+				</div>		    	   
 		  </div>
+
+
 			<ul id="myTab" class="nav nav-tabs nav-justified">
 			  <li class="active"><a href="#personal_profile" data-toggle="tab">Personal Profile</a></li>
 			  <li><a href="#contact_details" data-toggle="tab">Contact Details</a></li>
@@ -13,29 +18,32 @@
 			  <li><a href="#page_url" data-toggle="tab">Page Url</a></li>
 			</ul>
 
-	<!-- Tab panes -->
-	<div class="tab-content">
+			<!-- Tab panes -->
+			<div class="panel-body">
+				<div class="tab-content">
+					<%= devise_error_messages! %>
+					<div class="tab-pane active" id="personal_profile">
+					  <%= render partial: 'users/edit/personal_profile' %>
+					</div>
 
-		<div class="tab-pane active" id="personal_profile">
-		  <%= render partial: 'users/edit/personal_profile' %>
-		</div>
+				  <div class="tab-pane" id="contact_details">
+				  	<%= render partial: 'users/edit/contact_details' %>
+				  </div>
 
-	  <div class="tab-pane" id="contact_details">
-	  	<%= render partial: 'users/edit/contact_details' %>
-	  </div>
+					<div class="tab-pane" id="acount_settings">
+						<%= render partial: 'users/edit/acount_settings' %>
+					</div>
 
-		<div class="tab-pane" id="acount_settings">
-			<%= render partial: 'users/edit/acount_settings' %>
-		</div>
-
-	  <div class="tab-pane" id="page_url">
-			<%= render partial: 'users/edit/page_url' %>
-	  </div>
+				  <div class="tab-pane" id="page_url">
+						<%= render partial: 'users/edit/page_url' %>
+				  </div>
+				</div>
+			</div>
+		</div>		
 	</div>
-	</div>
-
 
 	<p class="tab" style="visibility:hidden;">
 		<%= params[:user][:tab] if params[:user] && params[:user][:tab] %>
 	</p>	
 </div>
+
