change user url caution message

--- a/app/views/users/edit/_page_url.html.erb
+++ b/app/views/users/edit/_page_url.html.erb
@@ -4,7 +4,9 @@
 	html: { method: :put, class: 'form-horizontal' }		) do |f| %>
 
 		<% unless @user.slug_updated %>
-			<div class="alert alert-danger text-center">You can change your profile url only one time</div>	
+			<div class="alert alert-danger text-center">
+				<%= t (".change_url_message") %>
+			</div>	
 		<% end %>
 
 		<% if f.object.slug_updated %>
