--- a/app/views/homes/_search_form.html.erb
+++ b/app/views/homes/_search_form.html.erb
@@ -18,16 +18,26 @@
 						<%= render partial: 'search_form_without_autocomplete', locals:{f: f} %>
 					<% end %>		
 					<!-- DatePicker -->
-					<div class="form-group col-sm-6">
-				    <%= f.select :jday, 1..31  %> 
-				    <%= f.select :jmonth, collection_for_month %>
-				    <%= f.select :jyear, 1392..1393 %> 
+					<div class="form-group  date-select col-sm-6">
+				    <%= f.select :jday, 1..31,{}, {class: "form-control col-xs-1"}  %> 
+				    <%= f.select :jmonth, collection_for_month,{}, {class: "form-control col-xs-1"} %>
+				    <%= f.select :jyear, 1392..1393,{}, {class: "form-control col-xs-1"} %> 
 					</div>
 
 					<!-- Submit -->
 				  <div class="col-sm-6">
 							<%= f.button :submit, t("search_subtrips.form.search_btn"), class: "btn btn-warning btn-lg btn-block" %>
 					</div>		
+
+					<!-- Form Mode Change Links -->
+					<div class="mode-selector">
+					 <% if session['search_mode'] == 'autocomplete' %>
+					    <%= link_to  t("search_subtrips.form.mode.autocomplete.selector"), choose_search_mode_search_subtrips_path(search_mode: 'select') %>
+					 <% else %>
+					    <%= link_to  t("search_subtrips.form.mode.select.selector"), choose_search_mode_search_subtrips_path(search_mode: 'autocomplete') %> 
+					 <% end %>
+					</div>
+
 				<% end %>		
 			</div>			
 		</div>
