--- a/app/views/shared/_users_list.html.erb
+++ b/app/views/shared/_users_list.html.erb
@@ -2,7 +2,7 @@
   <div class="panel-heading">
     <h3 class="panel-title">
     	<%= title %>
-			<small class="pull-left ">Last online </small>
+			<small class="pull-left "> <%= t 'last_login' %> </small>
     </h3>
 
   </div>
