make profile visible for unlogged in users

--- a/app/views/profiles/show/_cover.html.erb
+++ b/app/views/profiles/show/_cover.html.erb
@@ -4,7 +4,7 @@
 				alt:"#{user.name} in hamsafaryab.com", class: "img-responsive") %>
 	</div>
 
-	<% if current_user.can_follow? user %>
+	<% if current_user && current_user.can_follow?(user) %>
 		<div class="follow"><%= follow_button user %></div> 
 	<% end %>
 	
