--- a/app/views/profiles/show/_small_screens.html.erb
+++ b/app/views/profiles/show/_small_screens.html.erb
@@ -5,6 +5,10 @@
 	<%= render partial: 'profiles/show/user_overview', locals: {user: user}  %>
 	<%= render partial: 'profiles/show/single_profile', locals: {user: user}  %>
 	<%= render partial: 'vehicles/show', locals: {user: user} %>
-	<%= render partial: 'shared/users_list', locals: {users: @followed_users, title: "#{@profile.user.name }'s Followed Users "} %>
-	<%= render @profile.timeline %>
+	<% if current_user %>
+		<%= render partial: 'shared/users_list', locals: {users: @followed_users, title: "#{t 'followed_users'} #{@profile.user.name }"} %>
+	<% end %>
+	<div class="posts">
+		<%= render @profile.timeline %>
+  </div>
 </div>
