--- a/app/views/profiles/show/_large_screens.html.erb
+++ b/app/views/profiles/show/_large_screens.html.erb
@@ -6,13 +6,21 @@
 
 	<%= render partial: 'profiles/show/single_profile', locals: {user: user}  %>
 	<%= render partial: 'vehicles/show', locals: {user: user} %>
-
-	<%= render partial: 'shared/users_list', locals: {users: @followed_users, title: "#{@profile.user.name }'s Followed Users "} %>
-
+	<% if current_user %>
+		<%= render partial: 'shared/users_list', locals: {users: @followed_users, title: "#{t 'followed_users'}  #{@profile.user.name } "} %>
+	<% end %>
 </div>
 <div id="leftContent" class="col-lg-8">
 	<%= render partial: 'profiles/show/cover', locals: {user:user} %>
 	<%= flash_creator flash %>
-	<%= render @profile.timeline %>
+
+  <div class="users-list panel panel-default">
+	  <div class="panel-heading">
+			<%= t 'posts' %>
+	  </div>
+	  <div class="panel-body">
+			<%= render @profile.timeline %>
+		</div>
+	</div>
 
 </div>
