--- a/app/views/profiles/show/_user_overview.html.erb
+++ b/app/views/profiles/show/_user_overview.html.erb
@@ -6,23 +6,31 @@
 <!--   <div class="panel-body">	</div> -->
 	<table class="table">
 		<tbody>
-		<tr>
-			<td>Activity</td>
-			<td><%= resent_activity(@profile.user, "activity") %></td>
-		</tr>
-			<tr>
-				<td>Last login Location</td>
-				<td><%= @profile.user.last_login_location %></td>
-			</tr>
 
-			<% if @profile.user.slug_updated %>
+			<% if current_user %>
 				<tr>
-					<td>Url</td>
-					<td>
-						<%= link_to_profile @profile.user %> 
-						</td>
-				</tr>	
-			<% end %>
+					<td>Activity</td>
+					<td><%= resent_activity(@profile.user, "activity") %></td>
+				</tr>
+				<tr>
+					<td>Last login Location</td>
+					<td><%= @profile.user.last_login_location %></td>
+				</tr>
+
+				<% if @profile.user.slug_updated %>
+					<tr>
+						<td>Url</td>
+						<td>
+							<%= link_to_profile @profile.user %> 
+							</td>
+					</tr>	
+				<% end %>
+
+			<% else %>
+				<%= force_to_sign_in_message %>
+			<% end %> <!-- if current_user -->
+			
 		</tbody>
 	</table>
 </div>
+
