--- a/app/views/vehicles/_show.html.erb
+++ b/app/views/vehicles/_show.html.erb
@@ -1,26 +1,32 @@
 <div class="panel panel-default clear">
-  <div class="panel-heading">Car detail</div>
-  <% if user.vehicle.present? %>
-    <table class="table">
-      <tbody>
-        <%=  table_show_cell "Color", user.vehicle.color %>
-        <%=  table_show_cell "Number plate", user.vehicle.number_plate %>
-        <%=  table_show_cell "Air condition", user.vehicle.air_condition %>
-        <%=  table_show_cell "Year", user.vehicle.year %>
-        <%=  table_show_cell "Model", "#{user.vehicle.vehicle_model.vehicle_brand.name} - #{user.vehicle.vehicle_model.name}" %>
-      </tbody>
-    </table>
-    
-    <%= link_to (image_tag user.vehicle.image.url(:small)), user.vehicle.image.url(:normal) %> <br>
-    <% if user == current_user %>
-      <%= link_to 'Edit car detail', edit_user_vehicles_path(user), class: "btn btn-primary" %>
-    <% end %>
+  <div class="panel-heading"><%= t '.car_details' %></div>
+    <% if current_user %>
+
+    <% if user.vehicle.present? %>
+      <table class="table">
+
+        <tbody>
+          <%=  table_show_cell "Color", user.vehicle.color %>
+          <%=  table_show_cell "Number plate", user.vehicle.number_plate %>
+          <%=  table_show_cell "Air condition", user.vehicle.air_condition %>
+          <%=  table_show_cell "Year", user.vehicle.year %>
+          <%=  table_show_cell "Model", "#{user.vehicle.vehicle_model.vehicle_brand.name} - #{user.vehicle.vehicle_model.name}" %>
+        </tbody>
+      </table>
+      
+      <%= link_to (image_tag user.vehicle.image.url(:small)), user.vehicle.image.url(:normal) %> <br>
+      <% if user == current_user %>
+        <%= link_to 'Edit car detail', edit_user_vehicles_path(user), class: "btn btn-primary" %>
+      <% end %>
+
+    <% else %>
+      <p>There is no car registered.</p>
+      <% if user == current_user %>
+        <p><%= link_to "Enter your car details", new_user_vehicles_path(user) %></p>    
+      <% end %>
+    <% end %>  <!-- if user.vehicle.present? -->
 
   <% else %>
-    <p>There is no car registered.</p>
-    <% if user == current_user %>
-      <p><%= link_to "Enter your car details", new_user_vehicles_path(user) %></p>    
-    <% end %>
-  <% end %>
-
+    <%= force_to_sign_in_message %>
+  <% end %> <!-- if current_user -->
   </div>
