--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,4 @@
+<% @page_title = @profile.user.name %>
 <!-- --       Larg Screen      -- -->
 <div class="visible-lg">
   <%= render partial: 'profiles/show/large_screens', locals: {user: @profile.user}  %>
