i18n on users profile layouts (show, edit)

--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title><%=t 'site_info.title' %><%= " | #{@page_title}" if @page_title %></title>
   <meta name="LANGUAGE" content="fa" />
-  <meta name="description" content=" اتوبوس &#10004; تسهیل در یافتن همسفر در مسافرت های بین شهری &#10004; سفر راحت &#10004;">
+  <meta name="description" content="تسهیل در یافتن همسفر در مسافرت های بین شهری">
 
   <%= favicon_link_tag IMAGES_PATH + "ico/favicon.gif" %>
   <script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places" type="text/javascript"></script>
