--- a/app/views/users/edit/_account_settings.html.erb
+++ b/app/views/users/edit/_account_settings.html.erb
@@ -25,7 +25,7 @@
 		<%= f.input :current_password, 
 								 # hint: "we need your current password to confirm your changes.",
 								 placeholder: "current password"  %>
-		<%= f.hidden_field :tab, :value => "acount_settings" %>
+		<%= f.hidden_field :tab, :value => "account_settings" %>
 
 		<%= f.button :submit, {class: ' btn-primary col-sm-offset-3'} %>
 		  
