--- a/app/views/users/edit/_page_url.html.erb
+++ b/app/views/users/edit/_page_url.html.erb
@@ -12,7 +12,7 @@
 		<% if f.object.slug_updated %>
 			<div class="well">
 			<p class="text-center">
-				your url is:
+				<%=t '.your_url_is' %>				
 				<strong>
 					<%= link_to_profile(@user,"") %>					
 				</strong>
