--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,7 +18,7 @@
 			  </li>
 			  
 			  <li><a href="#contact_details" data-toggle="tab"><%= t('users.contact_details') %></a></li>
-			  <li><a href="#acount_settings" data-toggle="tab"><%= t('users.account_settings') %></a></li>
+			  <li><a href="#account_settings" data-toggle="tab"><%= t('users.account_settings') %></a></li>
 			  <li><a href="#page_url" data-toggle="tab"><%= t('users.page_url') %></a></li>
 			</ul>
 
@@ -32,8 +32,8 @@
 				  <div class="tab-pane" id="contact_details">
 				  	<%= render partial: 'users/edit/contact_details' %>
 				  </div>
-					<div class="tab-pane" id="acount_settings">
-						<%= render partial: 'users/edit/acount_settings' %>
+					<div class="tab-pane" id="account_settings">
+						<%= render partial: 'users/edit/account_settings' %>
 					</div>
 				  <div class="tab-pane" id="page_url">
 						<%= render partial: 'users/edit/page_url' %>
