--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
 			  </li>
 
 			  <li><a href="#contact_details" data-toggle="tab"><%= t('users.contact_details') %></a></li>
-			  <li><a href="#acount_settings" data-toggle="tab"><%= t('users.account_settings') %></a></li>
+			  <li><a href="#account_settings" data-toggle="tab"><%= t('users.account_settings') %></a></li>
 			  <li><a href="#page_url" data-toggle="tab"><%= t('users.page_url') %></a></li>
 			</ul>
 
@@ -33,8 +33,8 @@
 			  	<%= render partial: 'users/show/contact_details' %>
 			  </div>
 
-				<div class="tab-pane" id="acount_settings">
-					<%= render partial: 'users/show/acount_settings' %>
+				<div class="tab-pane" id="account_settings">
+					<%= render partial: 'users/show/account_settings' %>
 				</div>
 
 			  <div class="tab-pane" id="page_url">
