--- a/app/views/users/show/_personal_profile.html.erb
+++ b/app/views/users/show/_personal_profile.html.erb
@@ -1,11 +1,10 @@
 <form class="form-horizontal" role="form">
-	<% gender = 'Male'? @user.gender == 'm' : "Female" %>
-	<%= user_form_control_static  "Gender", @user.gender %>
-	<%= user_form_control_static  "Username", @user.username %>
-	<%= user_form_control_static  "Firstname", @user.firstname %>
-	<%= user_form_control_static  "Lastname", @user.lastname %>
-	<%= user_form_control_static  "Age", @user.age %>
+	<%= user_form_control_static  User.human_attribute_name("gender"), t_gender(@user.gender) %>
+	<%= user_form_control_static  User.human_attribute_name("username"), @user.username %>
+	<%= user_form_control_static  User.human_attribute_name("firstname"), @user.firstname %>
+	<%= user_form_control_static  User.human_attribute_name("lastname"), @user.lastname %>
+	<%= user_form_control_static  User.human_attribute_name("age"), @user.age %>
 
-  <%= link_to "Change Personal Profile", edit_user_registration_path+'#personal_profile', class: 'btn btn-primary col-sm-offset-3' %>
+  <%= link_to t('.goto_change_personal_profile'), edit_user_registration_path+'#personal_profile', class: 'btn btn-link col-sm-offset-3' %>
   
 </form>
